# flask-postgresql

./: DockerFile.flask  DockerFile.postgres  Dockerfile  LICENSE  README.md  docker-compose.yml  init.sql  pyproject.toml
for_develop/nginx/: nginx.conf
src/: requirements.txt
src/app/: app.py
src/app/front/: .gitignore  package.json
src/app/lib/: postgresql.py
src/flask_postgresql_sample/: __init__.py  app.py
