[project]
name = "flask-postgresql-sample"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Haruki Ise", email = "hise@umn.co.jp" }
]
dependencies = [
    "flask>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/flask_postgresql_sample"]
