[project]
name = "cec"
version = "0.1.0"
description = ""
authors = [
    { name = "Tsuru Takeshi", email = "t-tsuru@kiei-inc.com" }
]
dependencies = [
    "flask>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
